# nn

./: .gitignore  Cargo.toml  NN.mat  README.md  Training.mat  notes.aux  notes.org  notes.tex
c_wrapper/nn_c/: Cargo.toml  cbindgen.toml  nng.h
c_wrapper/nn_c/src/: lib.rs
src/: #xor.rs#  digits.rs  lib.rs  nn_xor.rs  xor.rs
