[workspace]
members = [
		".",
		"c_wrapper/nn_c",
]

[package]
name = "nn"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "*"

# only used by binaries
image = "*"

[[bin]]
name = "xor"
path = "src/xor.rs"

[[bin]]
name = "nn_xor"
path = "src/nn_xor.rs"

[[bin]]
name = "digits"
path = "src/digits.rs"